example/debug.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debug
spec:
  replicas: 1
  selector:
    matchLabels:
      name: debug
  template:
    metadata:
      labels:
        name: debug
    spec:
      containers:
        - image: ubuntu:22.04
          command: [ "/bin/bash", "-c", "sleep 36000" ]
          name: container
