example/userservices.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-server
spec:
  replicas: 1
  selector:
    matchLabels:
      name: demo-server
  template:
    metadata:
      labels:
        name: demo-server
    spec:
      containers:
        - image: arschles/xkcd:latest
          name: xkcd
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: demo-server
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    name: demo-server
  type: ClusterIP
status:
  loadBalancer: { }

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-client
spec:
  replicas: 1
  selector:
    matchLabels:
      name: debug
  template:
    metadata:
      labels:
        name: debug
    spec:
      containers:
        - image: ubuntu:22.04
          command: [ "/bin/bash", "-c", "sleep 36000" ]
          name: container
