example/workloads.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xkcd
  namespace: xkcd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: xkcd
      app.kubernetes.io/name: xkcd
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: xkcd
        app.kubernetes.io/name: xkcd
    spec:
      containers:
        - image: arschles/xkcd:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: xkcd
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: { }
          securityContext: { }
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
---
apiVersion: v1
kind: Service
metadata:
  name: xkcd
  namespace: xkcd
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: xkcd
    app.kubernetes.io/name: xkcd
  type: ClusterIP
status:
  loadBalancer: { }

---
